fix spacing issue in firefox

--- a/css/styles.css
+++ b/css/styles.css
@@ -443,7 +443,6 @@ main {
 .project--details--container {   
     transform: translateX(75%);
     margin: 0;
-    margin-top: -2px;
     width: auto;
     flex: 0;
     display: flex;
@@ -479,6 +478,8 @@ main {
 
 .shrink {
     transform: scaleY(0);
+    height: 0px;
+    border: none;
     transition: 
         transform 0.8s ease-out;
 }
@@ -497,7 +498,7 @@ main {
 }
 
 .project.open-active > .project--title-small {
-    flex: 0;
+    flex: 0 0 auto;
 }
 
 .project.open-active > .project--details--container {
